Minor alignment fixes

--- a/less/modules/intro.less
+++ b/less/modules/intro.less
@@ -167,9 +167,20 @@
     }
 
     &_content {
-      padding: 2rem 0 0 0;
+      padding: 2rem 1rem 0 1rem;
       position: static;
       width: 100%;
+    }
+
+    &_action {
+      a {
+        font-size: 1.2rem;
+      }
+
+      > img {
+        height: 15px;
+        width: 15px;
+      }
     }
 
     &_text {
