--- a/less/modules/post.less
+++ b/less/modules/post.less
@@ -35,7 +35,7 @@
   &_external-link {
     display: block;
     font-family: @font-family-headline-bold;
-    font-size: 1.2rem;
+    font-size: 1.15rem;
 
     &-icon {
       height: 15px;
