--- a/less/modules/richtext.less
+++ b/less/modules/richtext.less
@@ -1,6 +1,6 @@
 .richtext {
   font-family: @font-family-base;
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   line-height: @line-height-content;
 
   a {
